# image_processing_task

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
image_processing/: CMakeLists.txt
image_processing/include/: image_processing.hpp
image_processing/src/: CMakeLists.txt  image_processing.cpp
image_processing/tests/: CMakeLists.txt  image_processing_test_suite.cpp
include/: image_processing_app.hpp
src/: image_processing_app.cpp  main.cpp
tests/: CMakeLists.txt  image_processing_app_test_suite.cpp
